--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
 /* Basic Style */
-body {
+ul,
+li,
+h3 {
+  margin: 0;
+  padding: 0px;
+  list-style: none;
+}
+
+input,
+button {
+  outline: none;
+}
+
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -12,18 +25,18 @@ body {
   text-align: right;
 }
 
-.matrix-info img {
-  width: 100%;
-}
-
-.matrix-info .matrix-info__link {
-  font-family: fantasy, cursive;
-}
-
 @media (max-width:768px) {
   .matrix-info {
     text-align: center;
   }
+}
+
+.matrix-info__image {
+  width: 100%;
+}
+
+.matrix-info__link {
+  font-family: fantasy, cursive;
 }
 
 .main {
@@ -42,22 +55,7 @@ body {
   display: flex;
 }
 
-ul {
-  margin: 0;
-  padding: 0px;
-}
-
-li,
-h3 {
-  list-style: none;
-}
-
-input,
-button {
-  outline: none;
-}
-
-button {
+.task-btn {
   background: none;
   border: 0px;
   color: #888;
@@ -67,13 +65,12 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.task-btn:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.section__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -83,7 +80,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.task__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -96,22 +93,22 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.task__input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.section__title_new {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.task__input_new {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task-list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -121,51 +118,51 @@ li {
   align-items: center;
 }
 
-li > * {
+.task-list__item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task__checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.task__name {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li >    input[type="text"] {
+.task-list__item > .task__input {
   width: 226px;
 }
 
-button.delete img {
+.task__delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.task__delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#section__completed-tasks label {
+.section__completed-tasks .task__name {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-list__item .task__input {
   display: none;
 }
 
-ul li.task_edit-mode input[type=text] {
+.task_edit-mode .task__input {
   display: inline-block;
   width: 224px;
 }
 
-ul li.task_edit-mode label {
+.task_edit-mode .task__name {
   display: none;
 }
